# agora-worker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  sqs_consumer.py
app/agents/: graph.py  investigator.py  nodes.py  scrubber.py  state.py
app/core/: celery_app.py  celery_config.py  config.py  health.py  security.py
app/services/: bedrock_client.py  embeddings.py  github_app.py  github_client.py  mcp_client.py
app/tasks/: remediation.py
tests/: test_bedrock_client.py  test_remediation_fallbacks.py  test_root_cause_node.py  test_upsert_lifecycle.py
