[project]
name = "remediation-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "celery[sqs]>=5.3.0,<6.0.0",
  "boto3>=1.34.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "kombu>=5.3.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "cryptography>=48.0.1,<49.0.0",
  "redis>=5.0.0,<6.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "langchain-core>=1.2.22",
  "langchain-aws>=0.2.0,<1.0.0",
  "mcp>=1.0.0,<2.0.0",
  "pyyaml>=6.0,<7.0",
  "headroom>=0.2.7,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
